@@ -1,2 +1,6 @@
 0.0.1
+Added item box.
+Added input box.
+Updated default options.
+1st commit.
 Started message boxes.
